--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
       <section id="about">
           <h1 class="headings">ABOUT ME</h1>
           <div id="pic">
-              <img src="./assets/logo3.jpg" alt="">
+              <img src="../assets/logo3.jpg" alt="">
               <div id="introduction">
                   <h2>ALBERT EINSTEIN</h2>
                   <p>Albert Einstein was born at Ulm, in Württemberg, Germany, on March 14, 1879. Six weeks later the family moved to Munich, where he later on began his schooling at the Luitpold Gymnasium. 
