--- a/public/index.html
+++ b/public/index.html
@@ -63,7 +63,7 @@
   <section id="experiences">
        <h1 class="headings">Experiences</h1>
        <div id="pic1">
-          <img src="./assets/logo4.jpg" alt="">
+          <img src="../assets/logo4.jpg" alt="">
            <div id="introduction">
                <h2>Einstein's Experience</h2>
               <ul>
@@ -82,7 +82,7 @@
       <h1 class="headings">Hobbies</h1>
       <div class="hob">
         <div class="hob1">
-         <img src="./assets/hobby2.jpg" alt="">
+         <img src="../assets/hobby2.jpg" alt="">
           <h2>He loved to sail</h2>
               <p>
                   When Einstein attended college at the Polytechnic Institute in Zurich, Switzerland, he fell in love with sailing. He would often take a boat out onto a lake, pull out a notebook, relax, and think. 
@@ -90,12 +90,12 @@
               </p>
          </div> 
          <div class="hob1">
-            <img src="./assets/hobby1.png" alt="">
+            <img src="../assets/hobby1.png" alt="">
               <h2>Einstein and the Violin</h2>
               <p>When Einstein was 13-years old, he suddenly changed his mind about the violin when he heard the music of Mozart. With a new passion for playing, Einstein continued to play the violin until the last few years of his life.</p>
           </div>
            <div class="hob1">
-              <img src="./assets/hobby3.jpg" alt="">
+              <img src="../assets/hobby3.jpg" alt="">
                   <h2>He loved reading books</h2>
                   <p>Einstein enjoyed reading and is quoted as saying that "Traktat" by David Humes had a big influence on him. He enjoyed classics, such as Don Quijote by Cervantes Saavedra and books with a scientific bent, including "Energy and Matter" by Ludwig Büchners and Aaron Bernstein's "Natural-Scientific Popular Books." He also read books by the philosophers Spinoza and Schopenhauer.
                    </p>
@@ -106,24 +106,24 @@
       <h1 class="headings">Blog</h1>
       <div class="hob">
           <div class="blog1">
-              <img src="./assets/stamps.jpg" alt="">
+              <img src="../assets/stamps.jpg" alt="">
           </div> 
           <div class="blog1">
-              <img src="./assets/img1.jpg" alt="">
+              <img src="../assets/img1.jpg" alt="">
           </div>
           <div class="blog1">
-              <img src="./assets/img2.jpg" alt="">
+              <img src="../assets/img2.jpg" alt="">
           </div>
       </div>
       <div class="hob">
           <div class="blog1">
-              <img src="./assets/img3.jpg" alt="">
+              <img src="../assets/img3.jpg" alt="">
           </div>
           <div class="blog1">
-              <img src="./assets/img5.png" alt="">
+              <img src="../assets/img5.png" alt="">
           </div>
           <div class="blog1">
-              <img src="./assets/img6.png" alt="">
+              <img src="../assets/img6.png" alt="">
           </div>
       </div>
      </section> 
